# trad_save_history

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  check_db.py  check_db_runner.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: docker.yml
config/: settings.py
db/: database.py
dotenv/: __init__.py
models/: market_data.py
services/: data_processor.py  db_size_checker.py  websocket_client.py
tests/: conftest.py  test_data_processor.py  test_db_connect.py  test_db_size_checker.py  test_logging_config.py  test_websocket_client.py
utils/: check_db.py  db_connect.py  logging_config.py
