[project]
name = "trad-save-history"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "pybit>=5.9.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.38",
    "pandas>=2.2.0",
    "tabulate>=0.9.0",
    "psycopg2-binary>=2.9.9",
    "mysql-connector-python>=8.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.12",
]
