[project]
name = "trad-save-history"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pybit>=5.9.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.38",
    "tabulate>=0.9.0",
    "psycopg2-binary>=2.9.9",
    "mysql-connector-python>=8.3.0",
    "pandas>=2.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.12",
    "pytest>=8.1.1",
]
